--- a/Gaussian Process - GPyTorch/MF_Model_Further_Testing.ipynb
+++ b/Gaussian Process - GPyTorch/MF_Model_Further_Testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -329,14 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished in 6.817441701889038 seconds.\n",
+      "Finished in 6.166275501251221 seconds.\n",
       "No of HF Inputs: 8\n",
       "No of LF Inputs: 25\n"
      ]
@@ -393,7 +393,7 @@
     "abs_path = os.path.abspath('')\n",
     "dir = os.path.dirname(abs_path)\n",
     "\n",
-    "plt.savefig(abs_path + \"\\\\attempt_2_plot.pdf\")\n",
+    "plt.savefig(abs_path + \"\\\\successful_plot.pdf\")\n",
     "print(f\"Finished in {(time.time() - time_start)} seconds.\" )\n",
     "\n",
     "print(f\"No of HF Inputs: {Nhf}\")\n",
