--- a/Neural Networks - PyTorch/NN_practice_1.ipynb
+++ b/Neural Networks - PyTorch/NN_practice_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,23 +45,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((67, 4), (33, 4), (67,), (33,))"
+       "(torch.Size([6, 10]),\n",
+       " torch.Size([4, 10]),\n",
+       " torch.Size([6, 1]),\n",
+       " torch.Size([4, 1]))"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.33, random_state=42)\n",
+    "\n",
+    "n_input, n_hidden, n_out, batch_size, learning_rate = 10, 15, 1, 10, 0.01\n",
+    "data_x = torch.randn(batch_size, n_input)\n",
+    "data_y = (torch.rand(size=(batch_size, 1)) < 0.5).float()\n",
+    "\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(data_x, data_y, test_size=0.33, random_state=42)\n",
     "\n",
     "X_train.shape, X_test.shape, Y_train.shape, Y_test.shape # Inputs have multiple dimensions whereas outputs have one."
    ]
@@ -75,9 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected np.ndarray (got Tensor)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m Y_test \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mfrom_numpy(X_test)\n\u001b[0;32m      2\u001b[0m Y_test \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mfrom_numpy(np\u001b[39m.\u001b[39masarray(Y_test))\n",
+      "\u001b[1;31mTypeError\u001b[0m: expected np.ndarray (got Tensor)"
+     ]
+    }
+   ],
    "source": [
     "Y_test = torch.from_numpy(X_test)\n",
     "Y_test = torch.from_numpy(np.asarray(Y_test))"
@@ -85,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
