--- a/Neural Networks - PyTorch/NN_practice_2.ipynb
+++ b/Neural Networks - PyTorch/NN_practice_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -76,15 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0359, -0.0262, -0.0921, -0.1390,  0.1575,  0.1645,  0.0437,  0.0947,\n",
-      "          0.1248,  0.0010]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[-0.0935,  0.0667,  0.1173, -0.0889, -0.1069,  0.1296,  0.0158,  0.0318,\n",
+      "         -0.1442,  0.0807]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6636, grad_fn=<MseLossBackward0>)\n"
+      "tensor(0.9864, grad_fn=<MseLossBackward0>)\n"
      ]
     }
    ],
@@ -129,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<MseLossBackward0 object at 0x000001F17EB26D00>\n",
-      "<AddmmBackward0 object at 0x000001F17EB26880>\n",
-      "<AccumulateGrad object at 0x000001F17EB26D00>\n"
+      "<MseLossBackward0 object at 0x0000024F7E527880>\n",
+      "<AddmmBackward0 object at 0x0000024F7E5271C0>\n",
+      "<AccumulateGrad object at 0x0000024F7E527880>\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
       "conv1.bias.grad before backward\n",
       "tensor([0., 0., 0., 0., 0., 0.])\n",
       "conv1.bias.grad after backward\n",
-      "tensor([0.0043, 0.0046, 0.0158, 0.0102, 0.0007, 0.0093])\n"
+      "tensor([-0.0055, -0.0024, -0.0002, -0.0050, -0.0039, -0.0031])\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
