--- a/Neural Networks - PyTorch/NN_Best_Yet.ipynb
+++ b/Neural Networks - PyTorch/NN_Best_Yet.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: tensor([3], device='cuda:0')\n"
+      "Predicted class: tensor([6], device='cuda:0')\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,23 +280,23 @@
       ")\n",
       "\n",
       "\n",
-      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0149, -0.0230,  0.0145,  ..., -0.0020, -0.0308,  0.0352],\n",
-      "        [-0.0094, -0.0355,  0.0294,  ...,  0.0174,  0.0139,  0.0314]],\n",
+      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0072, -0.0166, -0.0306,  ...,  0.0015,  0.0164, -0.0030],\n",
+      "        [ 0.0033, -0.0235, -0.0034,  ...,  0.0066,  0.0159, -0.0049]],\n",
       "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([-0.0253, -0.0069], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([-0.0054, -0.0330], device='cuda:0', grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[ 0.0234,  0.0383, -0.0207,  ...,  0.0026,  0.0143, -0.0432],\n",
-      "        [ 0.0428,  0.0275, -0.0426,  ...,  0.0074,  0.0085, -0.0062]],\n",
+      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[ 0.0036,  0.0353,  0.0361,  ..., -0.0387,  0.0141, -0.0256],\n",
+      "        [-0.0349, -0.0134, -0.0379,  ...,  0.0407,  0.0276,  0.0249]],\n",
       "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([ 3.6234e-02, -2.6632e-05], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([-0.0400,  0.0200], device='cuda:0', grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[ 0.0135,  0.0358, -0.0271,  ...,  0.0247,  0.0057,  0.0414],\n",
-      "        [-0.0100, -0.0369,  0.0093,  ...,  0.0244,  0.0270,  0.0330]],\n",
+      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[ 0.0060, -0.0434,  0.0253,  ..., -0.0006,  0.0045, -0.0405],\n",
+      "        [ 0.0198, -0.0027,  0.0211,  ...,  0.0420,  0.0073, -0.0066]],\n",
       "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
       "\n",
-      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([-0.0412, -0.0428], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([0.0033, 0.0418], device='cuda:0', grad_fn=<SliceBackward0>) \n",
       "\n"
      ]
     }
@@ -316,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('dis_env')",
+   "display_name": "Python 3.9.10 ('dis_env': venv)",
    "language": "python",
    "name": "python3"
   },
