--- a/Neural Networks - PyTorch/Theory/NN_PyTorch.ipynb
+++ b/Neural Networks - PyTorch/Theory/NN_PyTorch.ipynb
@@ -16,10 +16,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.10 ('dis_env': venv)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "53a9d46bace0d87d5d8b47eb975286de82fb882fc38f144f4a3850996fb362a0"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
