don't be stressed
it's going to be alright no matter the son emrecan

--- a/Codes/Final Report/Basic_NN_Final copy.ipynb
+++ b/Codes/Final Report/Basic_NN_Final copy.ipynb
@@ -10,14 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch.nn as nn\n",
-    "import torch\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
+    "import torch"
    ]
   },
   {
@@ -50,12 +43,6 @@
     "embedding_dim = 0\n",
     "\n",
     "\n",
-    "# Synthetic data function\n",
-    "# def F(y):\n",
-    "#     return np.sin(8 * np.pi * y + np.pi / 10)\n",
-    "#     return (6 * y - 2)**2 * np.sin(12 * y - 4) - 10 * (y - 1)**2\n",
-    "\n",
-    "\n",
     "def F(y):\n",
     "    zeros = torch.zeros_like(y)\n",
     "    half = torch.ones_like(y) * 0.5\n",
@@ -63,32 +50,26 @@
     "    y_1 = torch.where(half < y, 3 + 0.5 * (6 * y - 2)**2 * torch.sin(12 * y - 4) + 10 * (y - 0.5), y_0)\n",
     "    return y_1\n",
     "\n",
-    "\n",
-    "# Random ranged data array\n",
+    "# Random ranged data array for synthetic data\n",
     "Z = torch.linspace(0, complexity_range, 1000)[:,None]\n",
     "\n",
     "# Model's total training/val/testing dataset\n",
     "X = torch.linspace(0, complexity_range, total_points_dataset, dtype=torch.float32)[:,None]\n",
     "\n",
-    "# Splitting dataset\n",
+    "# Splitting the dataset\n",
     "Placeholder, X_test, Place_holder, Y_test = train_test_split(X, F(X), test_size=0.8)\n",
     "\n",
     "X_train = torch.linspace(0, complexity_range, total_points_dataset)[:,None] # .long()\n",
-    "Y_train = F(X_train) # .float()\n",
+    "Y_train = F(X_train)\n",
     "\n",
-    "# Transfering data to GPU for CUDA\n",
-    "X_train = X_train.to(device); X_test = X_test.to(device)\n",
-    "Y_train = Y_train.to(device); Y_test = Y_test.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Network(torch.nn.Module):\n",
-    "  def __init__(self, hidden_dims, input_dim, output_dim):\n",
+    "\n",
+    "# Model Hyperparameters Initialisation\n",
+    "num_epochs = 1000 # Number of epochs to run\n",
+    "hidden_dims = ([100, 100, 100, 100, 100, 100, 100]) # Number of neurons per hidden layer\n",
+    "\n",
+    "# Model Structure Initialisation\n",
+    "class Network(torch.nn.Module): # NN Class\n",
+    "  def __init__(self, hidden_dims, input_dim, output_dim): # NN layer initialisation (number of input, output and hidden layers are set)\n",
     "    super().__init__()\n",
     "    self.fc1 = nn.Linear(input_dim, hidden_dims[0])\n",
     "    self.fc2 = nn.Linear(hidden_dims[0], hidden_dims[1])\n",
@@ -99,7 +80,7 @@
     "    self.fc7 = nn.Linear(hidden_dims[5], hidden_dims[6])\n",
     "    self.fc8 = nn.Linear(hidden_dims[6], output_dim)\n",
     "\n",
-    "  def forward(self, x):\n",
+    "  def forward(self, x): # NN activation function initialisation (ReLu in this case)\n",
     "    x = torch.relu(self.fc1(x))\n",
     "    x = torch.relu(self.fc2(x))\n",
     "    x = torch.relu(self.fc3(x))\n",
@@ -110,10 +91,10 @@
     "    x = self.fc8(x)\n",
     "    return x\n",
     "\n",
-    "model = Network(hidden_dims, input_dim, output_dim).to(device)\n",
+    "model = Network(hidden_dims, input_dim, output_dim).to(device) # Model ready to be trained \n",
     "\n",
     "for param in model.parameters():\n",
-    "    param.requires_grad = True"
+    "    param.requires_grad = True # \"True\" indicates that the model's gradients will be computed and updated during training "
    ]
   },
   {
@@ -122,60 +103,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training\n",
-    "losses = [] \n",
-    "val_losses = []\n",
-    "prev_loss = []\n",
-    "loss = torch.zeros(1)\n",
-    "batch_size = 32\n",
+    "# Training Loop\n",
+    "criterion = torch.nn.MSELoss().to(device) # Loss Criterion (Mean Squared Error in this case)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001, weight_decay=0) # Adam optimiser with its learning rate set to 0.0001\n",
     "\n",
-    "# Loss criterion and optimizer\n",
-    "criterion = torch.nn.MSELoss().to(device)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
+    "for epoch in range(num_epochs): # Sets a loop for each epoch\n",
     "\n",
-    "for epoch in range(num_epochs):\n",
-    "    shuffled_indices = torch.randperm(X_train.size(0))\n",
-    "    X_train = X_train[shuffled_indices]\n",
-    "    Y_train = Y_train[shuffled_indices]\n",
-    "    \n",
-    "    # Batches\n",
-    "    num_batches = X_train.size(0) // batch_size\n",
-    "    for batch in range(num_batches):\n",
-    "        start = batch * batch_size\n",
-    "        end = start + batch_size\n",
-    "        X_batch = X_train[start:end]\n",
-    "        Y_batch = Y_train[start:end]\n",
-    "\n",
-    "    # Training\n",
-    "    prev_loss = loss.item()\n",
-    "    y_pred = model(X_train.to(device))\n",
-    "    Y_train = Y_train.reshape(*X_train.shape)\n",
-    "    loss = criterion(y_pred, Y_train.to(device))\n",
-    "    losses.append(loss.item())\n",
-    "    optimizer.zero_grad()\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "\n",
-    "    # Validation\n",
-    "    shuffled_indices_val = torch.randperm(X_test.size(0))\n",
-    "    X_test = X_test[shuffled_indices_val]\n",
-    "    Y_test = Y_test[shuffled_indices_val]\n",
-    "\n",
-    "    num_batches_val = X_test.size(0) // batch_size\n",
-    "    for batch in range(num_batches_val):\n",
-    "        start = batch * batch_size\n",
-    "        end = start + batch_size\n",
-    "        X_batch = X_test[start:end]\n",
-    "        Y_batch = Y_test[start:end]\n",
-    "\n",
-    "    val_outputs = model(X_test)\n",
-    "    val_loss = criterion(val_outputs, Y_test)\n",
-    "    val_losses.append(val_loss.item())\n",
-    "\n",
-    "    current_loss = loss.item()\n",
-    "    if abs(current_loss - prev_loss) < 1e-9:\n",
-    "        break"
+    "    y_pred = model(X_train.to(device)) # Initiates forward pass by running X_input through the model\n",
+    "    loss = criterion(y_pred, Y_train.to(device)) # Computes loss between the prediction of the model and target Y_train data with the criterion \n",
+    "    optimizer.zero_grad() # Sets gradients of the parameters to zero before each epoch is run to avoid mixing of gradients between runs\n",
+    "    loss.backward() # Initiates backward pass and calculates gradients of the loss respect to all parameters in the network\n",
+    "    optimizer.step() # Updates the parameters of the model using the gradients using the optimizer"
    ]
   },
   {
