--- a/Codes/Neural Networks PyTorch/MFNN/First Model/MFNN_1.ipynb
+++ b/Codes/Neural Networks PyTorch/MFNN/First Model/MFNN_1.ipynb
@@ -89,7 +89,11 @@
     "\n",
     "# MFNN Hyper Paramters\n",
     "MF_num_epochs = 1500\n",
-    "MF_hidden_dims = ([1400, 1400, 1400, 1400, 1400, 1400, 1400])"
+    "MF_hidden_dims = ([1400, 1400, 1400, 1400, 1400, 1400, 1400])\n",
+    "\n",
+    "# LF NN Hyper Paramters\n",
+    "input_dim = 1\n",
+    "output_dim = 1"
    ]
   },
   {
@@ -98,10 +102,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LF NN Hyper Paramters\n",
-    "input_dim = 1\n",
-    "output_dim = 1\n",
-    "\n",
     "# Low Fidelity Neural Network\n",
     "class NeuralNetwork(torch.nn.Module):\n",
     "  def __init__(self, input_dim, LF_hidden_dims, output_dim):\n",
@@ -111,14 +111,12 @@
     "    self.fc3 = torch.nn.Linear(LF_hidden_dims[1], LF_hidden_dims[2])\n",
     "    self.fc4 = torch.nn.Linear(LF_hidden_dims[2], LF_hidden_dims[3])\n",
     "    self.fc5 = torch.nn.Linear(LF_hidden_dims[3], output_dim)\n",
-    "    # self.dropout = nn.Dropout(0.2)\n",
     "\n",
     "  def forward(self, x):\n",
     "    x = torch.relu(self.fc1(x))\n",
     "    x = torch.relu(self.fc2(x))\n",
     "    x = torch.relu(self.fc3(x))\n",
     "    x = torch.relu(self.fc4(x))\n",
-    "    # x = self.dropout(x)\n",
     "    x = self.fc5(x)\n",
     "    return x\n",
     "\n",
