--- a/Codes/Final Report/MFNN/Poster_NACA_Aerofoil_Model.ipynb
+++ b/Codes/Final Report/MFNN/Poster_NACA_Aerofoil_Model.ipynb
@@ -6,11 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "import os"
    ]
   },
   {
@@ -41,7 +42,10 @@
     "lf_num_epochs = 400\n",
     "hf_num_epochs = 1000\n",
     "MF_epochs     = 1000\n",
-    "hidden_dims = ([2000, 2000, 2000, 2000, 2000, 2000, 2000, 2000])"
+    "hidden_dims = ([2000, 2000, 2000, 2000, 2000, 2000, 2000, 2000])\n",
+    "LF_input_dim = 1; LF_output_dim = 1\n",
+    "HF_input_dim = 1; HF_output_dim = 1\n",
+    "MF_input_dim = 2; MF_output_dim = 1"
    ]
   },
   {
@@ -70,20 +74,12 @@
    ],
    "source": [
     "### Data Prepration\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import torch\n",
-    "\n",
     "dir_path = os.path.abspath(os.path.dirname(\"\"))\n",
     "NACA2412 = pd.read_excel(f\"{dir_path}/data/NACA2412 Cm over AoA.xlsx\").values # .values converts to numpy arrays\n",
     "NACA0012 = pd.read_excel(f\"{dir_path}/data/NACA0012 Cm over AoA.xlsx\").values\n",
-    "# test = print(torch.from_numpy(NACA0012).shape)\n",
-    "print(len(NACA2412))\n",
     "\n",
     "# NACA2412 will be the TARGET data that we want to predict which will be the source of HF points\n",
     "# whereas NACA0012 will be the LF data that will guide us in the MFNN\n",
-    "\n",
     "\n",
     "# The model's aim will be to learn the relationship between AOA and CM (X = AOA, Y = CM)\n",
     "def tt_split(NACA2412, NACA0012):\n",
@@ -126,17 +122,10 @@
     "X_LF_TRAIN, Y_LF_TRAIN, X_HF_TRAIN, Y_HF_TRAIN, X_LF, Y_LF, X_HF, Y_HF, _ = tt_split(NACA2412, NACA0012) \n",
     "\n",
     "# LF data processing\n",
-    "X_LF_TRAIN = (X_LF_TRAIN.reshape(-1,1))\n",
-    "Y_LF_TRAIN = (Y_LF_TRAIN.reshape(-1,1))\n",
+    "X_LF_TRAIN = (X_LF_TRAIN.reshape(-1,1)); Y_LF_TRAIN = (Y_LF_TRAIN.reshape(-1,1))\n",
     "\n",
     "# HF data processing\n",
-    "X_HF_TRAIN = (X_HF_TRAIN.reshape(-1,1))\n",
-    "Y_HF_TRAIN = (Y_HF_TRAIN.reshape(-1,1))\n",
-    "\n",
-    "fig = plt.figure(figsize=(5,3))\n",
-    "plt.plot(X_HF_TRAIN, Y_HF_TRAIN, \"xb\")\n",
-    "plt.plot(X_HF,Y_HF, \"k\")\n",
-    "plt.scatter(X_LF_TRAIN, Y_LF_TRAIN)\n",
+    "X_HF_TRAIN = (X_HF_TRAIN.reshape(-1,1)); Y_HF_TRAIN = (Y_HF_TRAIN.reshape(-1,1))\n",
     "\n",
     "# Transfering data to GPU for CUDA\n",
     "X_LF_TRAIN = torch.from_numpy(X_LF_TRAIN).to(device, dtype=torch.float32); Y_LF_TRAIN = torch.from_numpy(Y_LF_TRAIN).to(device, dtype=torch.float32)\n",
@@ -158,8 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LF_input_dim = 1\n",
-    "LF_output_dim = 1\n",
+    "\n",
     "\n",
     "class LowFidelityNetwork(torch.nn.Module):\n",
     "  def __init__(self, hidden_dims, LF_input_dim, LF_output_dim):\n",
@@ -200,13 +188,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LF_model.train()\n",
-    "\n",
     "# Training\n",
-    "LF_losses = [] \n",
-    "val_losses = []\n",
-    "prev_loss = []\n",
-    "LF_loss = torch.zeros(1)\n",
+    "LF_model.train()\n",
+    "LF_losses = []; val_losses = []; prev_loss = []; LF_loss = torch.zeros(1)\n",
     "\n",
     "LF_batch_size = 160\n",
     "\n",
@@ -216,12 +200,11 @@
     "\n",
     "\n",
     "for epoch in range(lf_num_epochs):\n",
-    "    \n",
     "    permutation = torch.randperm(X_LF_TRAIN.size()[0])\n",
     "    \n",
     "    for i in range(0,X_LF_TRAIN.size()[0], LF_batch_size):\n",
     "        optimizer.zero_grad()\n",
-    "\n",
+    "        \n",
     "        indices = permutation[i:i+LF_batch_size]\n",
     "        batch_x, batch_y = X_LF_TRAIN[indices], Y_LF_TRAIN[indices]\n",
     "    \n",
@@ -230,10 +213,7 @@
     "        LF_loss = criterion(outputs,batch_y)\n",
     "        LF_losses.append(LF_loss.item())\n",
     "        LF_loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "    if (epoch+1) % 600 == 0:\n",
-    "        print(f'Epoch [{epoch+1}/{hf_num_epochs}], Loss: {LF_loss.item():.4f}')"
+    "        optimizer.step()"
    ]
   },
   {
@@ -293,9 +273,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HF_input_dim = 1\n",
-    "HF_output_dim = 1\n",
-    "\n",
     "class HighFidelityNetwork(torch.nn.Module):\n",
     "  def __init__(self, hidden_dims, HF_input_dim, HF_output_dim):\n",
     "    super().__init__()\n",
@@ -441,8 +418,7 @@
    "source": [
     "L1mean = LF_model(X_HF_TRAIN.to(device))\n",
     "\n",
-    "L2train = torch.hstack((X_HF_TRAIN, L1mean)) # think of the house price example (sqr feet, rooms, garden, etc.)\n",
-    "print(L2train.shape)"
+    "L2train = torch.hstack((X_HF_TRAIN, L1mean)) # think of the house price example (sqr feet, rooms, garden, etc.)"
    ]
   },
   {
@@ -451,9 +427,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MF_input_dim  = 2\n",
-    "MF_output_dim = 1\n",
-    "\n",
     "class MultiFidelityNetwork(torch.nn.Module):\n",
     "  def __init__(self, hidden_dims, MF_input_dim, MF_output_dim):\n",
     "    super().__init__()\n",
@@ -503,31 +476,21 @@
     }
    ],
    "source": [
-    "MF_model.train()\n",
-    "\n",
     "# Training\n",
-    "MF_losses = [] \n",
-    "val_losses = []\n",
-    "prev_loss = []\n",
-    "MF_loss = torch.zeros(1)\n",
+    "MF_model.train(); MF_losses = []; val_losses = []; prev_loss = []; MF_loss = torch.zeros(1)\n",
     "\n",
     "# MF_loss criterion and optimizer\n",
     "criterion = torch.nn.MSELoss().to(device)\n",
     "optimizer = torch.optim.Adam(MF_model.parameters(), lr=0.000001, weight_decay=1e-15) # weight_decay=1e-5\n",
     "\n",
     "for epoch in range(MF_epochs):\n",
-    "\n",
-    "    # Training\n",
     "    prev_loss = MF_loss.item()\n",
     "    MF_y_pred = MF_model(L2train)\n",
     "    MF_loss = criterion(MF_y_pred, Y_HF_TRAIN)\n",
     "    MF_losses.append(MF_loss.item())\n",
     "    optimizer.zero_grad()\n",
     "    MF_loss.backward(retain_graph=True)\n",
-    "    optimizer.step()\n",
-    "\n",
-    "    if (epoch+1) % 300 == 0:\n",
-    "        print(f'Epoch [{epoch+1}/{MF_epochs}], Loss: {MF_loss.item():.4f}')"
+    "    optimizer.step()"
    ]
   },
   {
@@ -609,8 +572,7 @@
     }
    ],
    "source": [
-    "target_width     = 1.5\n",
-    "prediction_width = 2\n",
+    "target_width     = 1.5; prediction_width = 2\n",
     "\n",
     "# Set figure size and axis label font size\n",
     "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10,5), sharex=True)\n",
